changed a bunch to get to 2 views, then slowly attempted a revert back

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -3,12 +3,79 @@
 
         <div>
             <div id="map">
+                <script>
+                        var div = document.getElementById("map_canvas");
+
+                        // Invoking Map using Google Map SDK v2 by dubcanada
+                        var map = plugin.google.maps.Map.getMap(div,{
+                            'camera': {
+                                'latLng': setPosition(37.7833, -122.4167),
+                                'zoom': 10
+                            }
+                        });
+
+                        // Capturing event when Map load are ready.
+                        map.addEventListener(plugin.google.maps.event.MAP_READY, function(){
+
+                            // Defining markers for demo
+                            var markers = [{
+                                position: setPosition(37.8197, -122.4786),
+                                title: "Golden Gate Bridge"
+                            }, {
+                                position: setPosition(37.4830, -122.2456),
+                                title: "Fisherman's Wharf"
+                            }, {
+                                position: setPosition(37.7697, -122.4769),
+                                title: "Golden Gate Park"
+                            }, {
+                                position: setPosition(37.8267, -122.4233),
+                                title: "Alcatraz Island"
+                            }, {
+                                position: setPosition(37.7881, -122.4075),
+                                title: "Union Square"
+                            }, {
+                                position: setPosition(37.7941, -122.4077914),
+                                title: "Chinatown"
+                            }, {
+                                position: setPosition(37.8057, -122.4218),
+                                title: "Ghirardelli Square"
+                            }, {
+                                position: setPosition(37.7516, -122.4477),
+                                title: "Twin Peaks"
+                            }, {
+                                position: setPosition(37.7782, -122.3907),
+                                title: "AT&T Park"     
+                            }];
+
+                            // Bind markers
+                            for (var i = 0; i < markers.length; i++) {
+                                map.addMarker({
+                                    'marker': markers[i],
+                                    'position': markers[i].position
+                                }, function(marker) {
+
+                                    // Defining event for each marker
+                                    marker.on("click", function() {
+                                        $state.go("profile")
+                                    });
+
+                                });
+                            }
+                        });
+                    </script>
             </div>
 
             <div width="80%" class="list list-inset" style="margin-left:10%;margin-right:10%;">
+                
                 <label class="item item-input">
                     <input type="text" ng-model="user.desc" placeholder="Description">
                 </label>
+
+                <a href="/#/home">HOME</a>
+
+                <button class="button button-full button-positive" ng-click="go()">
+                    Click to go HOME
+                </button>
 
                 <button class="button button-full button-positive" ng-click="saveDetails()">
                     Save
